@@ -55,13 +55,15 @@
 * POST <e_url>/api/v1/auth
 
     e.g. 1              id=proxy&type=http&url=<url>&user=myuser&pass=mypass
-    e.g. 2              id=sb&url=<url>&user=myuser&pass=mypass
+    e.g. 2              id=sb&type=user-pass&url=<url>&user=myuser&pass=mypass
+    e.g. 3              id=sb&type=x509&url=<url>&pass=mypass&path=c:\key.p12
 
     Def "id"            authentication identifier: "sb", "proxy"
     Def "type"          OPTIONAL type of authentication (for proxy)
     Def "url"           destination url (for Switchboard login or proxy)
     Def "user"          user for authentication
     Def "pass"          password for authentication
+    Def "path"          OPTIONAL path (for type=x509)
 
 
 [ Setup API ]             
